@@ -2,7 +2,7 @@
 # Kernel/System/Ticket/Article.pm - global article module for OTRS kernel
 # Copyright (C) 2001-2005 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: Article.pm,v 1.96 2005-11-20 22:11:38 martin Exp $
+# $Id: Article.pm,v 1.97 2005-12-21 19:37:06 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -18,7 +18,7 @@ use Mail::Internet;
 use Kernel::System::StdAttachment;
 
 use vars qw($VERSION);
-$VERSION = '$Revision: 1.96 $';
+$VERSION = '$Revision: 1.97 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 =head1 NAME
@@ -2160,8 +2160,7 @@ sub ArticleAccountedTimeGet {
         " FROM " .
         " time_accounting " .
         " WHERE " .
-        " article_id = $Param{ArticleID} " .
-        "  ";
+        " article_id = $Param{ArticleID}";
     $Self->{DBObject}->Prepare(SQL => $SQL);
     while (my @Row = $Self->{DBObject}->FetchrowArray()) {
         $AccountedTime = $AccountedTime + $Row[0];
@@ -2169,6 +2168,34 @@ sub ArticleAccountedTimeGet {
     return $AccountedTime;
 }
 
+=item ArticleAccountedTimeDelete()
+
+delete accounted time of article
+
+  $TicketObject->ArticleAccountedTimeDelete(
+    ArticleID => $ArticleID,
+  );
+
+=cut
+
+sub ArticleAccountedTimeDelete {
+    my $Self = shift;
+    my %Param = @_;
+    # check needed stuff
+    if (!$Param{ArticleID}) {
+      $Self->{LogObject}->Log(Priority => 'error', Message => "Need ArticleID!");
+      return;
+    }
+    # db quote
+    foreach (qw(ArticleID UserID)) {
+        $Param{$_} = $Self->{DBObject}->Quote($Param{$_}, 'Integer');
+    }
+    # db query
+    my $SQL = "DELETE FROM time_accounting " .
+        " WHERE " .
+        " article_id = $Param{ArticleID}";
+    return $Self->{DBObject}->Do(SQL => $SQL);
+}
 
 # --
 # the following is the pod for Kernel/System/Ticket/ArticleStorage*.pm
