@@ -2,7 +2,7 @@
 # Kernel/System/Ticket/ArticleStorageFS.pm - article storage module for OTRS kernel
 # Copyright (C) 2001-2005 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: ArticleStorageFS.pm,v 1.28 2005-11-08 06:59:06 martin Exp $
+# $Id: ArticleStorageFS.pm,v 1.29 2005-12-21 19:37:06 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -23,7 +23,7 @@ use MIME::Base64;
 umask 002;
 
 use vars qw($VERSION);
-$VERSION = '$Revision: 1.28 $';
+$VERSION = '$Revision: 1.29 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 # --
@@ -78,6 +78,11 @@ sub ArticleDelete {
     # delete attachments and plain emails
     my @Articles = $Self->ArticleIndex(TicketID => $Param{TicketID});
     foreach (@Articles) {
+        # delete time accounting
+        $Self->ArticleAccountedTimeDelete(
+            ArticleID => $_,
+            UserID => $Param{UserID},
+        );
         # delete attachments
         $Self->ArticleDeleteAttachment(
             ArticleID => $_,
